# karenina-server

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  build_hooks.py  pyproject.toml  test_db_rubrics.py
.claude/commands/: vulture.md
.github/workflows/: ci.yml
examples/mcp/: presets.env
mcp_presets/: .gitignore  README.md  example_biocontext.json
src/karenina_server/: __init__.py  cli.py  constants.py  exceptions.py  server.py
src/karenina_server/api/: __init__.py  adele_handlers.py  auth_handlers.py  chat_handlers.py  config_handlers.py  database_handlers.py  file_handlers.py  generation_handlers.py  health_handlers.py  mcp_handlers.py  preset_handlers.py  rubric_handlers.py  template_builder_handlers.py  verification_handlers.py
src/karenina_server/middleware/: __init__.py  csrf_middleware.py
src/karenina_server/schemas/: __init__.py  adele.py  database.py  file.py  mcp.py  template.py  template_builder.py  verification.py
src/karenina_server/services/: __init__.py  adele_classification_service.py  config_service.py  defaults_service.py  generation_service.py  mcp_preset_service.py  preset_service.py  progress_broadcaster.py  rubric_service.py  template_builder_service.py  template_converter.py  verification_service.py
src/karenina_server/testing/: __init__.py  e2e_fixture_mode.py
src/karenina_server/utils/: __init__.py  attr_utils.py  model_identifier.py  rubric_utils.py
tests/: __init__.py  conftest.py  test_config_handlers.py  test_config_service.py  test_csrf.py  test_defaults_service.py  test_generation_service.py  test_preset_api.py  test_preset_service.py  test_question_selector_api.py  test_rubric_api.py  test_summary_endpoints.py  test_template_generation_api.py
tests/api/: test_database_handlers.py
tests/e2e/: conftest.py  test_rubric_db_roundtrip.py
tests/integration/: conftest.py
tests/integration/api/: test_config_handlers.py  test_database_handlers.py  test_generation_handlers.py  test_preset_handlers.py  test_question_handlers.py  test_rubric_handlers.py  test_summary_handlers.py  test_template_builder_handlers.py
tests/integration/middleware/: test_csrf_middleware.py
tests/integration/services/: test_config_service.py  test_defaults_service.py  test_generation_service.py  test_preset_service.py  test_verification_autosave.py  test_verification_pipeline.py
tests/services/: test_verification_pipeline.py  test_verification_service_autosave.py
tests/unit/: conftest.py
tests/unit/api/: test_database_handlers.py  test_verification_result_summary.py
tests/unit/middleware/: test_csrf.py
tests/unit/schemas/: test_result_summary_schema.py  test_verification_schemas.py
tests/unit/services/: test_generation_service.py  test_lock_ordering.py  test_template_builder_service.py  test_template_converter.py  test_verification_service_counts.py
tests/unit/utils/: test_rubric_utils.py
